# atomic-workflow

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONSTITUTION.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  ask.agent.md  audit.agent.md  code.agent.md  context-loader.agent.md  debug.agent.md  deep-thinker.agent.md  orchestrator.agent.md  researcher.agent.md  review-panel.agent.md  reviewer-anthropic.agent.md  reviewer-google.agent.md  reviewer-openai.agent.md  test-runner.agent.md
.github/bylaws/: ddd-architecture.md  git-workflow.md  python-environment.md
.github/prompts/: code-audit.prompt.md  code-review.prompt.md  pre-commit.prompt.md  security-scan.prompt.md  skill-health-check.prompt.md
.github/workflows/: ci.yml
archive/: anesthesia-workflow-granular.md
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: editorPanel.ts  extension.ts  messages.ts
extension/src/mcp/: mcpClient.ts
extension/src/treeView/: phaseTreeProvider.ts
extension/webview-ui/: index.html  package-lock.json  package.json  vite.config.ts
extension/webview-ui/src/: App.tsx  main.tsx  types.ts  useWorkflowMessages.ts
extension/webview-ui/src/hooks/: useVsCodeApi.ts
extension/webview-ui/src/nodes/: DecisionNode.tsx  StepNode.tsx
memory-bank/: activeContext.md  decisionLog.md  progress.md
scripts/hooks/: __init__.py  agent_freshness_check.py  commit_size_guard.py  framework.py  memory_bank_reminder.py
src/atomic_workflow/: cli.py  serialization.py
src/atomic_workflow/domain/: __init__.py  errors.py  models.py
src/atomic_workflow/graph/: __init__.py  generator.py
src/atomic_workflow/mcp/: __init__.py  __main__.py
src/atomic_workflow/parser/: __init__.py  baseline_parser.py  variant_parser.py
src/atomic_workflow/repository/: __init__.py  step_index.py  workflow_repository.py
src/atomic_workflow/resolver/: __init__.py  variant_resolver.py
src/atomic_workflow/services/: __init__.py  workflow_service.py
src/atomic_workflow/validation/: __init__.py  validator.py
tests/: conftest.py
tests/integration/: test_cli.py  test_validation_and_graph.py  test_workflow_repository.py  test_workflow_service.py
tests/unit/: test_baseline_parser.py  test_hook_framework.py  test_step_index.py  test_variant_parser.py
workflows/anesthesia/: README.md
workflows/anesthesia/analysis/: ai-workflow-analysis.md
workflows/anesthesia/baseline/: phase-a-preop.md  phase-b-ward-prep.md  phase-c-transport.md  phase-d-holding.md  phase-e-monitoring.md  phase-f-preparation.md  phase-g-induction.md  phase-h-positioning.md  phase-i-maintenance.md  phase-j-emergence.md  phase-k-pacu.md  phase-l-postop.md
workflows/anesthesia/variants/: day-surgery.md  emergency.md  urgent.md
