[project]
name = "atomic-workflow"
version = "0.1.0"
description = "Clinical workflow decomposition, variant overlay, and AI-accessible redesign engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Tz Ping Gau", email = "u9401066@gmail.com" }
]
keywords = ["clinical-workflow", "mcp", "variant-overlay", "markdown-parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# === 正式依賴 (§0.6.2) ===
dependencies = [
    "PyYAML>=6.0",
    "ruamel.yaml>=0.18",
    "jsonschema>=4.20",
    "mcp>=1.0",
]

# === 開發依賴 ===
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-mock>=3.14",
    "pytest-timeout>=2.3",

    # Static Analysis
    "mypy>=1.10",
    "ruff>=0.8",
    "bandit[toml]>=1.8",

    # Pre-commit
    "pre-commit>=3.7",

    # Type stubs
    "types-PyYAML",
]

streamlit = [
    "streamlit>=1.38",
]

# === 入口點 ===
[project.scripts]
atomic-workflow = "atomic_workflow.mcp:main"
atomic-workflow-cli = "atomic_workflow.cli:main"
test = "pytest:console_main"

# === 建置系統 ===
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_workflow"]

# ============================================================
# 工具配置
# ============================================================

# === Ruff (Linter + Formatter) ===
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific
    "S",      # flake8-bandit
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
]

[tool.ruff.lint.isort]
known-first-party = ["atomic_workflow"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"scripts/**/*.py" = ["S603", "S607"]  # subprocess calls in hooks

# === MyPy (Type Checker) ===
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["mcp.*", "ruamel.*"]
ignore_missing_imports = true

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests (no file I/O)",
    "integration: Integration tests (uses corpus files)",
]

# === Bandit ===
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # assert usage OK in non-production code

# === Coverage ===
[tool.coverage.run]
source = ["src/atomic_workflow"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
